--- a/LT2/index.html
+++ b/LT2/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
 	<title>
-		My First Website
+		Recipes
 	</title>
 </head>
 <body>
-<h1> Hello, I am Ma.Yna Maurich Gellaco, this is my first web page. </h1>
+<h1> Recipes </h1>
 <ul>
 	
   <li><a href = "/index.php"> HOME</a></li>
