--- a/LT3/index.html
+++ b/LT3/index.html
@@ -18,9 +18,9 @@
 		}
 		
 		#songs div {
-			width: 340px;
+			width: 300px;
 			height: 550px;
-			margin: 50px;
+			margin: 45px;
 			border: 5px solid rgb(23, 24, 61);
 			float: left;
 			font-size: 17px;
@@ -29,7 +29,7 @@
 
 		<body>
 		<h1> My Top 10 Favorite Songs </h1>
-      <a href = "/indek.php">HOME</a>
+      <a href = "/index.php">HOME</a>
 		<div id = "songs">
 			<div>
 				<h2> Top 1 </h2>
