--- a/LT3/index.html
+++ b/LT3/index.html
@@ -14,6 +14,7 @@
 			width: 2000;
 			height: 1690px;
 			padding: 5px;
+			border: 5px solid rgb(23, 24, 61);
 			background-color: rgba(195, 195, 211, 0.584);
 		}
 		
