--- a/CLE1MT/solution.html
+++ b/CLE1MT/solution.html
@@ -42,7 +42,7 @@ li a:hover:not(.active) {
 	</head>
 
 	<ul>
-  <li><a href="home.html">Home</a></li>
+  <li><a href="index.html">Home</a></li>
   <li><a href="introduction.html">Introduction</a></li>
   <li><a href="solution.html">Solution </a></li>
   <li><a href="gallery.html">Gallery</a></li>
