--- a/LT3/index.html
+++ b/LT3/index.html
@@ -30,7 +30,7 @@
 
 		<body>
 		<h1> My Top 10 Favorite Songs </h1>
-      <a href = "/index.php">HOME</a>
+      <a href = "index.html">HOME</a>
 		<div id = "songs">
 			<div>
 				<h2> Top 1 </h2>
