--- a/LT2/index.html
+++ b/LT2/index.html
@@ -9,7 +9,7 @@
 <h1> Recipes </h1>
 <ul>
 	
-  <li><a href = "index.html"> HOME</a></li>
+  <li><a href = "/index.php"> HOME</a></li>
   <li><a href = "Pineapple Chicken.html"> Pineapple Chicken</a></li>
   <li><a href = "Vegetarian Rice.html"> Vegetarian Rice </a></li>
   <li><a href = "Salmon in the oven.html"> Salmon in the oven</a></li>
