--- a/LT4/index.html
+++ b/LT4/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>POEM ABOUT LIFE</title>
         <lomk rel = "Fredoka">
+            <a href = "/index.php"> HOME </a> 
       <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@400;600&family=Homemade+Apple&family=Lobster+Two&family=Nanum+Pen+Script&display=swap" rel="stylesheet">
