--- a/LT5/index.html
+++ b/LT5/index.html
@@ -1,49 +1,20 @@
 <!DOCTYPE html>
-<html>
-<body>
-	<head>
-		<title>Welcome!</title>
-        <lomk rel = "Fredoka">
-      <link rel="preconnect" href="https://fonts.googleapis.com">
+<html lang="en-US">
+<head>
+    <title>MURPHY THE DOG</title>
+   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@400;600&family=Homemade+Apple&family=Lobster+Two&family=Nanum+Pen+Script&display=swap" rel="stylesheet">
-            <style>
-
-            	body {
-                    background-image: url(arf.jpg);
-                    background-repeat:  no-repeat;
-                    background-position:  fixed;
-                    background-size: cover;
-               
-            }
-            h1{
-                font-family: 'Fredoka';
-                font-size:  70px;
-                text-align:  center;
-                padding-top: 8px;
-                color:#CD9B8D ;
-                background-color:rgba(152, 170, 190,  0.400);
-            }
-            h2{
-                font-family: 'Fredoka';
-                font-size:  40px;
-                text-align:  left;
-                padding-top: 8px;
-                color:#DFDA9A ;
-
-            }
-        </style>
-		
-<h1>WELCOME TO MY HOME</h1>
-<h2 onclick="this.innerHTML='HI! MY NAME IS MURPHY'">Click to know my name!!</h2>
-<h2 onclick="this.innerHTML='I AM 1 YEAR OLD ALREADY'">Click to know my age!!</h2>
-<h2 onclick="this.innerHTML='I LOVE TO EAT, ROAM AROUND, AND SLEEP'">Do you want to know what I love? Just click :)</h2>
-<h2 onclick="this.innerHTML='GOOD BYE <3'">THANK YOU ANDDD...(click)</h2>
-	
-
-
-
-</lomk>
+<link href="https://fonts.googleapis.com/css2?family=Bungee+Inline&family=Fredoka:wght@400;600&family=Rubik+Moonrocks&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="stylesheet.css">
+<script src="javas.js"></script>
 </head>
+
+<body>
+    
+<h1>HELLO MY FRIEND! NICE TO MEET YOU!</h1>
+<h2 onmouseover="hoverEvent(this)"onmouseout="unHoverEvent(this)">My Name:</h2>
+<h2 onclick="clickEvent(this)">My Age:(click)</h2>
+<h2 onclick="downEvent(this)"> Favorite food:(click)</h2>
+
 </body>
 </html>
